# frackit

./: .ci_base.yml  .ci_run_tests  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  paper.bib  paper.md
appl/: CMakeLists.txt
appl/example1/: CMakeLists.txt  README.md  example1.cc  example1.py
appl/example2/: CMakeLists.txt  README.md  example2.cc  example2.py
appl/example3/: CMakeLists.txt  README.md  example3.cc  example3.py
appl/example4/: CMakeLists.txt  README.md  example4.cc  example4.py
frackit/: CMakeLists.txt
frackit/common/: CMakeLists.txt  extractctype.hh  extractdimension.hh  id.hh  idpair.hh  math.hh  promotedtype.hh  typetraits.hh  utilities.hh
frackit/distance/: CMakeLists.txt  distance.hh  distancetoboundary.hh  pointonboundary.hh  pointongeometry.hh
frackit/entitynetwork/: CMakeLists.txt  constraints.hh  constraintsmatrix.hh  containedentitynetwork.hh  containedentitynetworkinterface.hh  entitynetwork.hh  entitynetworkinterface.hh  impl_admissibledimension.hh  impl_admissiblemagnitude.hh  impl_distancetoboundary.hh  multigeometryentityset.hh  networkbuilder.hh
frackit/entitynetwork/constraints_impl/: CMakeLists.txt  admissibledimension.hh  admissiblemagnitude.hh  distancetoboundary.hh
frackit/geometry/: CMakeLists.txt  boundingbox.hh  box.hh  circle.hh  ctype.hh  cylinder.hh  cylindermantle.hh  cylindersurface.hh  cylindricalsurface.hh  dimension.hh  direction.hh  disk.hh  ellipse.hh  ellipsearc.hh  ellipticalgeometry.hh  geometry.hh  hollowcylinder.hh  line.hh  name.hh  plane.hh  point.hh  polygon.hh  precision.hh  quadrilateral.hh  segment.hh  sphere.hh  triangle.hh  triangulation.hh  vector.hh
frackit/geometryutilities/: CMakeLists.txt  applyongeometry.hh  assign.hh  getboundingbox.hh  isplanar.hh  name.hh
frackit/intersection/: CMakeLists.txt  algo_cylsurface_disk.hh  algo_cylsurface_planargeom.hh  algo_cylsurface_quadrilateral.hh  algo_disk_disk.hh  algo_disk_line.hh  algo_face_disk.hh  algo_face_planargeom.hh  algo_face_quadrilateral.hh  algo_find_touching_points.hh  algo_planargeom_line.hh  algo_planargeom_planargeom.hh  algo_plane_line.hh  algo_plane_plane.hh  algo_quadrilateral_disk.hh  algo_quadrilateral_line.hh  algo_quadrilateral_quadrilateral.hh  algo_segment_segment.hh  algo_shell_disk.hh  bboxintersection.hh  emptyintersection.hh  intersect.hh  intersectionangle.hh  intersectionpredicates.hh  intersectionresult.hh  intersectiontraits.hh
frackit/intersection/algorithms/: CMakeLists.txt  algo_cylmantle_disk.hh  algo_cylmantle_planargeom.hh  algo_cylmantle_quadrilateral.hh  algo_cylsurface_disk.hh  algo_cylsurface_face.hh  algo_cylsurface_planargeom.hh  algo_cylsurface_polygon.hh  algo_cylsurface_quadrilateral.hh  algo_disk_disk.hh  algo_disk_line.hh  algo_face_disk.hh  algo_face_face_3d.hh  algo_face_planargeom.hh  algo_face_quadrilateral.hh  algo_find_touching_points.hh  algo_planargeom_line.hh  algo_planargeom_planargeom.hh  algo_plane_line.hh  algo_plane_plane.hh  algo_polygon_disk.hh  algo_polygon_polygon.hh  algo_quadrilateral_disk.hh  algo_quadrilateral_line.hh  algo_quadrilateral_quadrilateral.hh  algo_segment_segment.hh  algo_shell_disk.hh  intersection_cylsurface_disk.hh  intersection_disk_disk.hh  intersection_disk_line.hh  intersection_plane_line.hh  intersection_plane_plane.hh  intersection_segment_segment.hh
frackit/io/: CMakeLists.txt  brepwriter.hh  gmshwriter.hh
frackit/magnitude/: CMakeLists.txt  area.hh  containedmagnitude.hh  length.hh  magnitude.hh  volume.hh
frackit/occ/: CMakeLists.txt  breputilities.hh  geomutilities.hh  gputilities.hh
frackit/precision/: CMakeLists.txt  defaultepsilon.hh  precision.hh
frackit/python/: CMakeLists.txt
frackit/python/common/: CMakeLists.txt  extractctype.hh  id.hh  math.hh
frackit/python/entitynetwork/: CMakeLists.txt  constraints.hh  entitynetwork.hh  networkbuilder.hh  networkbuilderwrappers.hh
frackit/python/geometry/: CMakeLists.txt  box.hh  brepwrapper.hh  brepwrappers.hh  circle.hh  ctype.hh  cylinder.hh  cylindersurface.hh  direction.hh  disk.hh  distance.hh  distancetoboundary.hh  ellipse.hh  ellipsearc.hh  ellipticalgeometry.hh  emptyintersection.hh  geometry.hh  getboundingbox.hh  hollowcylinder.hh  intersect.hh  line.hh  magnitude.hh  plane.hh  point.hh  polygon.hh  quadrilateral.hh  registerdimensionproperties.hh  segment.hh  sphere.hh  triangle.hh  vector.hh
frackit/python/geometryutilities/: CMakeLists.txt  dimension.hh
frackit/python/intersection/: CMakeLists.txt  emptyintersection.hh  intersect.hh
frackit/python/io/: CMakeLists.txt  gmshwriter.hh
frackit/python/magnitude/: CMakeLists.txt  magnitude.hh
frackit/python/occutilities/: CMakeLists.txt  breputilities.hh  brepwrapper.hh  brepwrappers.hh
frackit/python/precision/: CMakeLists.txt  defaultepsilon.hh  precision.hh
frackit/python/sampling/: CMakeLists.txt  boxpointsampler.hh  cylinderpointsampler.hh  pointsampler.hh  status.hh
frackit/sampling/: CMakeLists.txt  boxpointsampler.hh  cylinderpointsampler.hh  disksampler.hh  geometrypointsampler.hh  geometrysampler.hh  geometrysampling.hh  makepointsampler.hh  makeuniformpointsampler.hh  multigeometrysampler.hh  pointsampler.hh  pointsampling.hh  polygonsampler.hh  quadrilateralsampler.hh  samplingstrategy.hh  sequentialsamplingstrategy.hh  status.hh  uniformpointsamplertraits.hh
python/: CMakeLists.txt  setup.py  setup.py.in
python/frackit/: CMakeLists.txt
python/frackit/common/: CMakeLists.txt  _common.cc
python/frackit/entitynetwork/: CMakeLists.txt  __init__.py  _entitynetwork.cc
python/frackit/geometry/: CMakeLists.txt  __init__.py  _geometry.cc
python/frackit/intersection/: CMakeLists.txt  __init__.py  _intersection.cc
python/frackit/io/: CMakeLists.txt  _io.cc
python/frackit/magnitude/: CMakeLists.txt  __init__.py  _magnitude.cc
python/frackit/occutilities/: CMakeLists.txt  __init__.py  _occutilities.cc
python/frackit/precision/: CMakeLists.txt  __init__.py  _precision.cc
python/frackit/sampling/: CMakeLists.txt  __init__.py  _sampling.cc
test/: CMakeLists.txt
(+76 files in other folders)
