add_subdirectory(common)
add_subdirectory(distance)
add_subdirectory(entitynetwork)
add_subdirectory(geometry)
add_subdirectory(geometryutilities)
add_subdirectory(intersection)
add_subdirectory(io)
add_subdirectory(magnitude)
add_subdirectory(occ)
add_subdirectory(precision)
add_subdirectory(sampling)
