add_subdirectory(common)
add_subdirectory(distance)
add_subdirectory(entitynetwork)
add_subdirectory(geometry)
add_subdirectory(geometryutilities)
add_subdirectory(intersection)
add_subdirectory(io)
add_subdirectory(magnitude)
add_subdirectory(occ)
add_subdirectory(precision)
if (FRACKIT_ENABLE_PYTHONBINDINGS)
    add_subdirectory(python)
endif ()
add_subdirectory(sampling)
