install(FILES
box.hh
circle.hh
CMakeLists.txt
cylinder.hh
cylindermantle.hh
direction.hh
disk.hh
ellipsearc.hh
ellipse.hh
ellipticalgeometry.hh
geometry.hh
hollowcylinder.hh
line.hh
plane.hh
point.hh
quadrilateral.hh
segment.hh
triangle.hh
vector.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/frackit/geometry)
