install(FILES
boundingbox.hh
box.hh
circle.hh
CMakeLists.txt
ctype.hh
cylinder.hh
cylindersurface.hh
dimension.hh
direction.hh
disk.hh
ellipsearc.hh
ellipse.hh
ellipticalgeometry.hh
geometry.hh
hollowcylinder.hh
line.hh
plane.hh
point.hh
polygon.hh
quadrilateral.hh
segment.hh
sphere.hh
triangle.hh
triangulation.hh
vector.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/frackit/geometry)
