install(FILES
algo_cylsurface_disk.hh
algo_disk_disk.hh
algo_disk_line.hh
algo_face_disk.hh
algo_find_touching_points.hh
algo_plane_line.hh
algo_plane_plane.hh
algo_segment_segment.hh
algo_shell_disk.hh
emptyintersection.hh
intersect.hh
intersectionpredicates.hh
intersectiontraits.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/frackit/intersection)
