install(FILES
boxpointsampler.hh
cylinderpointsampler.hh
disksampler.hh
geometrysampler.hh
makepointsampler.hh
makeuniformpointsampler.hh
multigeometrysampler.hh
pointsampler.hh
quadrilateralsampler.hh
samplingstrategy.hh
sequentialsamlingstrategy.hh
uniformpointsamplertraits.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/frackit/sampling)
