install(FILES
algo_cylsurface_disk.hh
algo_cylsurface_face.hh
algo_cylsurface_planargeom.hh
algo_cylsurface_quadrilateral.hh
algo_disk_disk.hh
algo_disk_line.hh
algo_face_face_3d.hh
algo_planargeom_line.hh
algo_planargeom_planargeom.hh
algo_plane_line.hh
algo_plane_plane.hh
algo_quadrilateral_disk.hh
algo_quadrilateral_line.hh
algo_quadrilateral_quadrilateral.hh
algo_segment_segment.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/frackit/intersection/algorithms)
