install(FILES
box.hh
brepwrapper.hh
brepwrappers.hh
circle.hh
ctype.hh
cylinder.hh
cylindersurface.hh
direction.hh
disk.hh
distance.hh
distancetoboundary.hh
ellipsearc.hh
ellipse.hh
ellipticalgeometry.hh
emptyintersection.hh
geometry.hh
hollowcylinder.hh
intersect.hh
line.hh
magnitude.hh
plane.hh
point.hh
polygon.hh
quadrilateral.hh
registerdimensionproperties.hh
segment.hh
sphere.hh
triangle.hh
vector.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/frackit/python/geometry)
